# ESP32-S3-Touch-AMOLED-2.06

.github/scripts/: discover_esp_idf_examples.py
examples/Arduino-v3.2.0/examples/09_MicTest/: 09_MicTest.ino
examples/ESP-IDF-v5.4.2/01_AXP2101/: sdkconfig.defaults
examples/ESP-IDF-v5.4.2/02_lvgl_demo_v9/main/: CMakeLists.txt  idf_component.yml
examples/ESP-IDF-v5.4.2/03_esp-brookesia/components/brookesia_core/: CMakeLists.txt  idf_component.yml
examples/ESP-IDF-v5.4.2/03_esp-brookesia/main/: CMakeLists.txt  idf_component.yml
examples/ESP-IDF-v5.4.2/04_Immersive_block/main/: CMakeLists.txt  idf_component.yml
examples/ESP-IDF-v5.4.2/05_Spec_Analyzer/main/: idf_component.yml
examples/ESP-IDF-v5.4.2/06_videoplayer/components/bsp_extra/: idf_component.yml
examples/ESP-IDF-v5.4.2/06_videoplayer/main/: CMakeLists.txt  idf_component.yml
